--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="home"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
+        <a class="navbar-brand"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,13 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="home">Home</a>
+                    <a class="nav-link active" aria-current="page"><ion-icon name="home"></ion-icon>Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop">Shop</a>
+                    <a class="nav-link">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cart">Cart</a>
+                    <a class="nav-link">Cart</a>
                 </li>
             </ul>
         </div>
