--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -8,13 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"><ion-icon name="home"></ion-icon>Home</a>
+                    <a class="nav-link" aria-current="page"><ion-icon id="home" name="home"></ion-icon>Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Shop</a>
+                    <a class="nav-link"><ion-icon id="card" name="card"></ion-icon>Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Cart</a>
+                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span class="badge">5</span></a>
                 </li>
             </ul>
         </div>
