fixed http request from json file

--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -20,3 +20,8 @@
         </div>
     </div>
 </nav>
+
+<div *ngFor='let item of items'>
+    <p>{{ item.id }}</p>
+    <p>{{ item.make }}</p>
+</div>
