--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <a href="https://www.facebook.com/ddomi1228/"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="https://www.facebook.com/ddomi1228/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
         </div>
         <div class="col">
-            <a href="https://www.instagram.com/ddomi1228/"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="https://www.instagram.com/ddomi1228/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
         </div>
         <div class="col">
-            <a href="https://twitter.com/?lang=en"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="https://twitter.com/?lang=en" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
     </div>
 </div>
