post method still needs to be fixed

--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -14,7 +14,7 @@
                     <a class="nav-link"><ion-icon id="card" name="card"></ion-icon>Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='qty' class="badge">{{ this.qty }}</span></a>
+                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='qty' class="badge">{{ qty }}</span></a>
                 </li>
             </ul>
         </div>
