--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
+    
         <a class="navbar-brand"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,9 +14,9 @@
                     <a class="nav-link"><ion-icon id="card" name="card"></ion-icon>Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='qty' class="badge">{{ qty }}</span></a>
+                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='this.shopService.qty' class="badge">{{ this.shopService.qty }}</span></a>
                 </li>
             </ul>
         </div>
-    </div>
+    
 </nav>
