--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,4 +1,4 @@
-
+<div class="container-fluid">
     <div class="row">
         <div class="col">
             <a href="https://www.facebook.com/ddomi1228/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -10,3 +10,4 @@
             <a href="https://twitter.com/?lang=en" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
     </div>
+</div>
