--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    
-        <a class="navbar-brand"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
+    <div class="container-fluid">
+        <a routerLink="/home" class="navbar-brand"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,15 +8,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page"><ion-icon id="home" name="home"></ion-icon>Home</a>
+                    <a routerLink="/home" class="nav-link" aria-current="page"><ion-icon id="home" name="home"></ion-icon>Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><ion-icon id="card" name="card"></ion-icon>Shop</a>
+                    <a routerLink="/shop" class="nav-link"><ion-icon id="card" name="card"></ion-icon>Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='this.shopService.qty' class="badge">{{ this.shopService.qty }}</span></a>
+                    <a routerLink="/cart" class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='this.shopService.qty' class="badge">{{ this.shopService.qty }}</span></a>
                 </li>
             </ul>
         </div>
-    
+    </div>
 </nav>
