--- a/src/app/_components/cart/cart.component.html
+++ b/src/app/_components/cart/cart.component.html
@@ -1,1 +1,30 @@
-<p>cart works!</p>
+<div class="container">
+    <table *ngIf="this.shopService.temp" class="table table-hover align-middle">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Make</th>
+                <th scope="col">Model</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th id="delete"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let cart of carts">
+                <th scope="row">{{ cart.id }}</th>
+                <td>{{ cart.make }}</td>
+                <td>{{ cart.model }}</td>
+                <td><button (click)="decrease(cart.id)" type="button" class="btn btn-danger">-</button> {{ cart.quantity }} <button (click)="increase(cart.id)" type="button" class="btn btn-primary">+</button></td>
+                <td>${{ cart.price }}</td>
+                <td><button (click)="delete(cart.id)" type="button" class="btn btn-danger"><ion-icon name="trash"></ion-icon></button></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <th colspan="2">${{ this.total }}</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
