--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 * {
     font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
 
 body, html {
