--- a/src/app/_components/cart/cart.component.html
+++ b/src/app/_components/cart/cart.component.html
@@ -16,7 +16,7 @@
                 <td>{{ cart.make }}</td>
                 <td>{{ cart.model }}</td>
                 <td><button (click)="decrease(cart.id)" type="button" class="btn btn-danger">-</button> {{ cart.quantity }} <button (click)="increase(cart.id)" type="button" class="btn btn-primary">+</button></td>
-                <td>${{ cart.price }}</td>
+                <td>${{ cart.price * cart.quantity }}</td>
                 <td><button (click)="delete(cart.id)" type="button" class="btn btn-danger"><ion-icon name="trash"></ion-icon></button></td>
             </tr>
         </tbody>
