--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <a routerLink="/home" class="navbar-brand"><img src="../../../favicon.ico" alt="icon">VintageCars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
