--- a/src/app/_components/shop/shop.component.html
+++ b/src/app/_components/shop/shop.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <h2 class="text-center">Shop</h2>
+    <hr>
+    
     <div class="row">
         <div *ngFor=" let product of products" class="col-md-4">
             <div class="card text-center my-3 w-100" style="width: 18rem;">
