--- a/src/app/_components/home/home.component.html
+++ b/src/app/_components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div id="image" class="container-fluid p-0">
+    <div class="inside">
+        <h1>Welcome to VintageCars</h1>
+    </div>
+</div>
+<div class="container">
+    <h2>What we offer</h2>
+    <hr>
+</div>
