--- a/src/app/_components/footer/footer.component.css
+++ b/src/app/_components/footer/footer.component.css
@@ -1,5 +1,5 @@
 div.container-fluid {
-    background-color: #888888 !important;
+    background-color: #acacac !important;
     height: 200px;
 }
 
