--- a/src/app/_components/home/home.component.html
+++ b/src/app/_components/home/home.component.html
@@ -3,7 +3,24 @@
         <h1>Welcome to VintageCars</h1>
     </div>
 </div>
-<div class="container">
+<div class="container-fluid">
     <h2>What we offer</h2>
     <hr>
+    <div class="row text-center">
+        <div class="col-md-4 col-sm-12">
+            <ion-icon class="icon" name="speedometer"></ion-icon>
+            <h3>Quick administration and management</h3>
+            <h4>We are the fastest dealership available on the market.</h4>
+        </div>
+        <div class="col-md-4 col-sm-12">
+            <ion-icon class="icon" name="earth"></ion-icon>
+            <h3>Worldwide <br> shipping</h3>
+            <h4>You can get your car delivered to you anywhere on the planet.</h4>
+        </div>
+        <div class="col-md-4 col-sm-12">
+            <ion-icon class="icon" name="ribbon"></ion-icon>
+            <h3>Certified <br> suppliers</h3>
+            <h4>All of our vehicles are from trusted and verified partners.</h4>
+        </div>
+    </div>
 </div>
