--- a/src/app/_components/home/home.component.css
+++ b/src/app/_components/home/home.component.css
@@ -10,7 +10,7 @@ h1 {
     color: white;
     display: grid;
     place-items: center;
-    padding: 220px 0;
+    padding: 180px 0;
     margin: 0;
 }
 
@@ -25,6 +25,54 @@ hr {
     margin-bottom: 50px;
     padding-bottom: 5px;
 }
+
+ion-icon {
+    font-size: 5rem;
+    color: #bd0000 !important;
+}
+
+h3 {
+    font-size: 40px;
+}
+
+h4 {
+    margin: 30px 0px;
+}
+
+.icon {
+	-webkit-animation: pulsate-fwd 3s ease-in-out infinite both;
+	        animation: pulsate-fwd 3s ease-in-out infinite both;
+}
+
+ @-webkit-keyframes pulsate-fwd {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes pulsate-fwd {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  
 
 @media screen and (max-width: 1200px) {
     h1 {
