--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -5,8 +5,8 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a routerLink="/home" class="nav-link" aria-current="page"><ion-icon id="home" name="home"></ion-icon>Home</a>
                 </li>
@@ -15,6 +15,12 @@
                 </li>
                 <li class="nav-item">
                     <a routerLink="/cart" class="nav-link"><ion-icon id="cart" name="cart"></ion-icon>Cart <span *ngIf='this.shopService.qty' class="badge">{{ this.shopService.qty }}</span></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a *ngIf="this.authService.isLoggedIn()" routerLink="/account" class="nav-link" aria-current="page"><ion-icon name="person-circle" id="acc"></ion-icon>{{ this.authService.username }}</a>
+                    <a *ngIf="!this.authService.isLoggedIn()" routerLink="/login" class="nav-link" aria-current="page"><ion-icon name="log-in" id="login"></ion-icon>Login</a>
                 </li>
             </ul>
         </div>
