--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
 }
 
 body, html {
-    overflow: auto !important;
-    background-color: #ffffff;
+  overflow: auto !important;
+  background-color: #ffffff;
 }
 
-/* width */
+button:focus {
+  text-decoration: none;
+  box-shadow: none;
+  outline: none;
+}
+
+
 ::-webkit-scrollbar {
-    width: 10px;
-  }
+  width: 10px;
+}
+   
+::-webkit-scrollbar-track {
+  background: #acacac;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(0, 0, 0);
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #acacac;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 0);
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(0, 0, 0);
-  }
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(0, 0, 0);
+}
