--- a/src/app/_components/login/login.component.html
+++ b/src/app/_components/login/login.component.html
@@ -13,7 +13,7 @@
                     #name="ngModel">
             </div>
             <div class="form-group p-3">
-                <label for="pw">Username</label>
+                <label for="pw">Password</label>
                 <input type="password" class="form-control" id="pw"
                     required
                     [(ngModel)]="this.password" name="pw"
