--- a/src/app/_components/register/register.component.html
+++ b/src/app/_components/register/register.component.html
@@ -34,7 +34,7 @@
                     #name="ngModel">
             </div>
 
-            <button [disabled]="!registerForm.form.valid" type="submit" class="btn btn-primary my-3 mx-3">Register</button>
+            <button routerLink='/login' [disabled]="!registerForm.form.valid" type="submit" class="btn btn-primary my-3 mx-3">Register</button>
             <button routerLink='/login' type="button" class="btn btn-primary my-3 mx-3">Already have an account</button>
         </form>
       </div>
